--- a/src/views/details.hbs
+++ b/src/views/details.hbs
@@ -20,7 +20,11 @@
                 </div>
 
                 <p class="disc">Description: {{currentMovieCopy.description}}</p>
-                    <p class="card-category">Category: {{currentMovieCopy.category}}</p>
+                <p class="card-category">Category: {{currentMovieCopy.category}}</p>
+
+                <div style="display: flex; justify-content: center;">
+                    <a href="/details/{{currentMovieCopy.id}}/attach-cast" class="details">Attach</a>
+                </div>
             </div>
         </div>
         <div class="card_right">
@@ -28,6 +32,7 @@
                 alt="{{currentMovieCopy.title}}">
         </div>
     </div>
+    
  <div class="main-cast-card">
         <div class="cast-card">
             <div class="card-img">
