rendered home view form mongodb database

--- a/src/views/details.hbs
+++ b/src/views/details.hbs
@@ -3,7 +3,6 @@
     <div class="main_card">
         <div class="card_left">
             <div class="card_datails">
-
                 <h1>{{currentMovieCopy.title}}</h1>
                 <div class="card-movie">
                     <div class="first-info">
@@ -28,7 +27,7 @@
             </div>
         </div>
         <div class="card_right">
-            <img src="{{currentMovieCopy.moviePoster}}"
+            <img src="{{currentMovieCopy.imageUrl}}"
                 alt="{{currentMovieCopy.title}}">
         </div>
     </div>
