rendered the detailed view with its info

--- a/src/views/details.hbs
+++ b/src/views/details.hbs
@@ -3,32 +3,32 @@
     <div class="main_card">
         <div class="card_left">
             <div class="card_datails">
-                <h1>{{currentMovieCopy.title}}</h1>
+                <h1>{{currentMovie.title}}</h1>
                 <div class="card-movie">
                     <div class="first-info">
-                        <p class="card-genre">Genre: {{currentMovieCopy.genre}}</p>
-                        <p class="card-director">Directror: {{currentMovieCopy.director}}</p>
+                        <p class="card-genre">Genre: {{currentMovie.genre}}</p>
+                        <p class="card-director">Directror: {{currentMovie.director}}</p>
                         
                     </div>
                     <div class="second-info">
                         
-                        <p class="card-year">Year: {{currentMovieCopy.year}}</p>
-                        <p class="card-ranking">Rating: <span id="stars">{{currentMovieCopy.rating}}</span></p>
+                        <p class="card-year">Year: {{currentMovie.year}}</p>
+                        <p class="card-ranking">Rating: <span id="stars">{{stars}}</span></p>
                     </div>
 
                 </div>
 
-                <p class="disc">Description: {{currentMovieCopy.description}}</p>
-                <p class="card-category">Category: {{currentMovieCopy.category}}</p>
+                <p class="disc">Description: {{currentMovie.description}}</p>
+                <p class="card-category">Category: {{currentMovie.category}}</p>
 
                 <div style="display: flex; justify-content: center;">
-                    <a href="/details/{{currentMovieCopy.id}}/attach-cast" class="details">Attach</a>
+                    <a href="/details/{{currentMovie.id}}/attach-cast" class="details">Attach</a>
                 </div>
             </div>
         </div>
         <div class="card_right">
-            <img src="{{currentMovieCopy.imageUrl}}"
-                alt="{{currentMovieCopy.title}}">
+            <img src="{{currentMovie.imageUrl}}"
+                alt="{{currentMovie.title}}">
         </div>
     </div>
     
