--- a/src/views/create.hbs
+++ b/src/views/create.hbs
@@ -36,7 +36,7 @@
                 </li>
                 <li>
                     <label for="image">Movie Poster:</label>
-                    <input type="text" class="inputFields" id="image" name="moviePoster" value="" />
+                    <input type="text" class="inputFields" id="image" name="imageUrl" value="" />
                 </li>
                 <li>
                     <label for="image">Rating:</label>
