--- a/src/views/search.hbs
+++ b/src/views/search.hbs
@@ -15,7 +15,7 @@
                 {{#each movies}}
                     <div class="flip flip-vertical">
                         <div class="front">
-                            <img src="{{moviePoster}}" alt="{{title}}">
+                            <img src="{{imageUrl}}" alt="{{title}}">
                         </div>
                         <div class="back">
                             <h1>{{title}}</h1>
