--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -16,11 +16,17 @@
             <img src="/img/logo.webp" alt="logo">
 
             <ul class="menu">
+                <!--User-->
                 <li><a href="/">Home</a></li>
                 <li><a href="/search">Search</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/create-movie">Create Movie</a></li>
                 <li><a href="/create-cast">Create Cast</a></li>
+                <li><a href="/auth/logout">Logout</a></li>
+
+                <!--Guest-->
+                <li><a href="/auth/login">Login</a></li>
+                <li><a href="/auth/register">Register</a></li>
             </ul>
 
         </nav>
