checks for posts' owner

--- a/src/views/movie/movie-details.hbs
+++ b/src/views/movie/movie-details.hbs
@@ -21,13 +21,13 @@
                 <p class="disc">Description: {{currentMovie.description}}</p>
                 <p class="card-category">Category: {{currentMovie.category}}</p>
 
-                <!--User-->
+                <!--Owner-->
                 <div style="display: flex; justify-content: center;">
                     <a href="/details/{{currentMovie.id}}/attach-cast" class="details">Attach</a>
                     <a class="details">Edit</a>
                     <a class="details">Delete</a>
                 </div>
-                 <!--User-->
+                 <!--Owner-->
             </div>
         </div>
         <div class="card_right">
