render edit movie page

--- a/src/views/movie/movie-details.hbs
+++ b/src/views/movie/movie-details.hbs
@@ -25,8 +25,8 @@
                 {{#if isOwner}}
                 <div style="display: flex; justify-content: center;">
                     <a href="/details/{{currentMovie.id}}/attach-cast" class="details">Attach</a>
-                    <a class="details">Edit</a>
-                    <a class="details">Delete</a>
+                    <a href="/details/{{currentMovie.id}}/edit" class="details">Edit</a>
+                    <a href="/details/{{currentMovie.id}}/delete" class="details">Delete</a>
                 </div>
                 {{/if}}
                 
