--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -20,13 +20,15 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/search">Search</a></li>
                 <li><a href="/about">About</a></li>
+                {{#if user}}
                 <li><a href="/create-movie">Create Movie</a></li>
                 <li><a href="/create-cast">Create Cast</a></li>
                 <li><a href="/auth/logout">Logout</a></li>
-
+                {{else}}
                 <!--Guest-->
                 <li><a href="/auth/login">Login</a></li>
                 <li><a href="/auth/register">Register</a></li>
+                {{/if}}
             </ul>
 
         </nav>
