--- a/src/views/movie/movie-edit.hbs
+++ b/src/views/movie/movie-edit.hbs
@@ -15,11 +15,14 @@
                     <label for="category">Category:</label>
                     <select id="category" class="inputFields" name="category">
                         <option value="">Select Category</option>
-                        <option value="tv-show" >TV Show</option>
+                        {{#each categories}}
+                            <option value="{{value}}" {{selected}}>{{label}}</option>
+                        {{/each}}
+                        {{!-- <option value="tv-show" >TV Show</option>
                         <option value="animation">Animation</option>
                         <option value="movie" selected>Movie</option>
                         <option value="documentary">Documentary</option>
-                        <option value="short-film">Short Film</option>
+                        <option value="short-film">Short Film</option> --}}
                     </select>
                 </li>
                 <li>
