random misstyped names in the template fixed

--- a/src/views/movie/movie-edit.hbs
+++ b/src/views/movie/movie-edit.hbs
@@ -39,11 +39,11 @@
                 </li>
                 <li>
                     <label for="image">Movie Poster:</label>
-                    <input type="text" class="inputFields" id="image" name="year" value="{{movie.imageUrl}}" />
+                    <input type="text" class="inputFields" id="image" name="imageUrl" value="{{movie.imageUrl}}" />
                 </li>
                 <li>
                     <label for="image">Rating:</label>
-                    <input type="text" class="inputFields" id="rating" name="year" value="{{movie.rating}}" />
+                    <input type="text" class="inputFields" id="rating" name="rating" value="{{movie.rating}}" />
                 </li>
                 <li>
                     <label for="description">Description:</label>
