--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -12,6 +12,14 @@
 
     <div id="box">
 
+        
+       {{#if error}}
+        <div class="error-container">
+            <p>{{error}}</p>
+        </div>
+        {{/if}} 
+
+
         <nav>
             <img src="/img/logo.webp" alt="logo">
 
